--- a/API/public_html/css/style.css
+++ b/API/public_html/css/style.css
@@ -77,17 +77,29 @@ height:100%;
 .desContent {
 	background-color: #FFFFFF;
 	border: none;
-	opacity: 0.8;
+	opacity: 0.9;
 	color: black;
-	filter: alpha(opacity=80);
+	filter: alpha(opacity=90);
 	margin-left: 150px;
+	margin-right:30px;
 	margin-top: 0px;
-	width: 1260px;
 	height: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 5;
 	display: none;
-	overflow:scroll;
+}
+
+.innerdesContent{
+	
+	height:90%;
+	margin-top:5%;
+	margin-bottom:5%;
+	margin-left:15%;
+	margin-right:15%;
+	float:left;
+	position:relative;
+	z-index:5;
+    overflow:scroll;
 }
 
 .methodology {
@@ -104,16 +116,30 @@ height:100%;
 .methodContent {
 	background-color: #FFFFFF;
 	border: 1px solid grey;
-	opacity: 0.8;
+	opacity: 0.9;
 	color: black;
-	filter: alpha(opacity=80);
+	filter: alpha(opacity=90);
 	margin-left: 150px;
 	margin-top: 0px;
 	width: 1260px;
 	height: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 5;
 	display: none;
+}
+
+.innermethodContent{
+	
+	width:86%;
+	height:90%;
+	margin-top:5%;
+	margin-bottom:5%;
+	margin-left:7%;
+	margin-right:7%;
+	float:left;
+	position:relative;
+	z-index:5;
+    overflow:scroll;
 }
 
 .graphs {
@@ -130,16 +156,30 @@ height:100%;
 .graphsContent {
 	background-color: #FFFFFF;
 	border: 1px solid grey;
-	opacity: 0.8;
+	opacity: 0.9;
 	color: black;
-	filter: alpha(opacity=80);
+	filter: alpha(opacity=90);
 	margin-left: 150px;
 	margin-top: 0px;
 	width: 1260px;
 	height: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 5;
 	display: none;
+}
+
+.innergraphsContent{
+	
+	width:86%;
+	height:90%;
+	margin-top:5%;
+	margin-bottom:5%;
+	margin-left:7%;
+	margin-right:7%;
+	float:left;
+	position:relative;
+	z-index:5;
+    overflow:scroll;
 }
 
 .data {
@@ -157,16 +197,30 @@ height:100%;
 .dataContent {
 	background-color: #FFFFFF;
 	border: 1px solid grey;
-	opacity: 0.8;
+	opacity: 0.9;
 	color: black;
-	filter: alpha(opacity=80);
+	filter: alpha(opacity=90);
 	margin-left: 150px;
 	margin-top: 0px;
 	width: 300px;
 	height: 100%;
 	position: fixed;
-	z-index: 1;
+	z-index: 5;
 	display: none;
+}
+
+.innerdataContent{
+	
+	width:86%;
+	height:90%;
+	margin-top:5%;
+	margin-bottom:5%;
+	margin-left:7%;
+	margin-right:7%;
+	float:left;
+	position:relative;
+	z-index:5;
+    overflow:scroll;
 }
 
 .rightbar{
@@ -229,10 +283,10 @@ height:100%;
 	font-weight: bold;
 	background-color: #FFFFFF;
 	border: 1px solid grey;
-	opacity: 0.7;
+	opacity: 0.8;
 	color: black;
 	float: right;
-	filter: alpha(opacity=70);
+	filter: alpha(opacity=80);
 	top:0;
 	bottom:0;
 	right:30px;
@@ -247,10 +301,10 @@ height:100%;
 .ptab {
 	background-color: #FFFFFF;
 	border: 1px solid grey;
-	opacity: 0.7;
+	opacity: 0.9;
 	color: black;
 	float: right;
-	filter: alpha(opacity=70);
+	filter: alpha(opacity=90);
 	left: 150px;
 	right:30px;
 	min-width: 20%;
@@ -434,47 +488,13 @@ height:100%;
 	background-color: grey;
 }
 
-.clearbutton {
-	padding-right: 30px;
-	padding-top: 10%;
-	border: none;
-	font-size: 1em;
-	text-align: center;
-	float: right;
-	position:relative;
-}
-
-.clearbutton a:link, a:visited {
-	color: black;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-}
-
-.clearbutton button {
-	background-color: white;
-	color: black;
-	width: 100%;
-	height: 150%;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-}
-
-.clearbutton button:hover {
-	background-color: #C0C7AA;
-}
-
-.clearbutton button:after {
-	background-color: #C0C7AA;
-}
 
 .dtitle{
 	  width:600px;
 	  height:70px;
 	  font-size:28px;
 	  font-weight:bold;
-	  margin-left:30%;
+	  margin-left:450px;
 	  text-align:center;
 	  opacity: 0.7;
 	  color: white;
@@ -485,14 +505,256 @@ height:100%;
 }
 
 .describetab{
-	padding-left:5%;
-	margin-top:30%;
-	height: 25%;
-	width: 90%;
+	padding-left:8%;
+	margin-top:8%;
+	height: 35%;
+	width: 85%;
 	z-index: 3;
+	font-size:1em;
 	word-wrap: break-word;
 	word-break: normal;
 	position: absolute;
 	float: left;
 	overflow:scroll;
+}
+
+.colorlegend{
+	width:250px;
+	height:250px;
+	font-size:13px;
+	font-weight:bold;
+	background-color:#695F5F;
+	margin-left:200px;
+	margin-top:50px;
+	text-align:left;
+	opacity: 0.7;
+	color: white;
+	filter: alpha(opacity=70);
+	z-index:4;
+	position:fixed;
+	line-height:8px;
+	border-radius:15px 15px 15px 15px;
+	display:none;
+}
+
+.legendbox_1{
+	margin-top:20%;
+	margin-left:4%;
+	width:90%;
+	height:7%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_2{
+	margin-top:3%;
+	margin-left:4%;
+	width:90%;
+	height:7%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_3{
+	margin-top:3%;
+	margin-left:4%;
+	width:90%;
+	height:7%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_4{
+	margin-top:3%;
+	margin-left:4%;
+	width:90%;
+	height:7%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_5{
+	margin-top:3%;
+	margin-left:4%;
+	width:90%;
+	height:7%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_6{
+	margin-top:3%;
+	margin-left:4%;
+	width:90%;
+	height:7%;
+	z-index:5;
+	position:relative;
+}
+
+.legendbox_7{
+	margin-top:3%;
+	margin-left:4%;
+	width:90%;
+	height:7%;
+	z-index:5;
+	position:relative;
+}
+
+.cbox_1{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	background-color:red;
+	width:15%;
+	height:60%;
+	z-index:6;
+	position:relative;
+	
+}
+
+.cbox_2{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	background-color:yellow;
+	width:15%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.cbox_3{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	background-color:green;
+	width:15%;
+	height:60%;
+	z-index:6;
+	position:relative;
+}
+
+.cbox_4{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	background-color:blue;
+	width:15%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.cbox_5{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	background-color:grey;
+	width:15%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.cbox_6{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	background-color:pink;
+	width:15%;
+	height:60%;
+	z-index:6;
+	position:relative;
+}
+
+.cbox_7{
+	margin-left:5%;
+	float:left;
+	margin-top:5%;
+	background-color:purple;
+	width:15%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.tbox_1 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:2%;
+	width:70%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+	
+}
+
+.tbox_2 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:2%;
+	width:70%;
+	height:60%;
+	z-index:6;
+	position:relative;		
+}
+
+.tbox_3 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:2%;
+	width:70%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.tbox_4 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:2%;
+	width:70%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.tbox_5 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:2%;
+	width:70%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+
+.tbox_6 {
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:2%;
+	width:70%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+.tbox_7{
+	margin-left:5%;
+	margin-right:5%;
+	float:right;
+	margin-top:2%;
+	width:70%;
+	height:60%;
+	z-index:6;
+	position:relative;	
+}
+.description_box{
+    font-weight:100;
+    overflow:scroll;
 }
