--- a/HTML/web/css/style.css
+++ b/HTML/web/css/style.css
@@ -495,7 +495,7 @@ height:100%;
 	  height:70px;
 	  font-size:28px;
 	  font-weight:bold;
-	  margin-left:450px;
+	  margin-left:35%;
 	  text-align:center;
 	  opacity: 0.7;
 	  color: white;
@@ -519,7 +519,7 @@ height:100%;
 }
 
 .colorlegend{
-	width:150px;
+	width:160px;
 	height:250px;
 	font-size:16px;
 	font-weight:bold;
